src/ui/snapshots/gust__ui__header__tests__header_no_data.snap
---
source: src/ui/header.rs
expression: output
---
┌ Current Conditions ──────────────────────────────────────────────────────────┐
│NO LOCATION SELECTED   --°                                                    │
│Loading...                                                                    │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
