src/ui/snapshots/gust__ui__header__tests__header_renders_current_conditions.snap
---
source: src/ui/header.rs
expression: output
---
┌ Current Conditions ──────────────────────────────────────────────────────────┐
│NEW YORK, NY  ⛅  72°F                                                         │
│Feels like 75°F | Wind 10 mph SW | 30.12 in | UV 5 Moderate | AQI 42 Good     │
│☀️  6:45am - 5:32pm (10h 47m) | 🌒  Waxing Crescent                             │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
